# paseo-downsizer

./: .gitignore  README.md  SPEC.md
deploy/: Caddyfile  README.md  install-on-vm.sh  matrix-selftest.sh  paseo-downsizer-ui.service  paseo-downsizer.service  push-artifacts.sh  service.env.example
docs/: community-announcement.md  provider-communication.md
docs/assets/: generate-charts.mjs
plan/: downsizing-plan.toml
service/: Cargo.toml
service/src/: api.rs  chain.rs  config.rs  dispatch.rs  main.rs  matrix.rs  model.rs  packing.rs  providers.rs  scheduler.rs  shared.rs  state.rs  state_store.rs  valueutil.rs
tools/: package.json  refresh-cohorts.mjs
ui/: .env.example  .gitignore  README.md  biome.json  next.config.ts  package.json  pnpm-lock.yaml
ui/src/app/: globals.css  layout.tsx  page.tsx
ui/src/components/dashboard/: CorePackingMap.tsx  Dashboard.tsx  DispatchLog.tsx  FinalityHealth.tsx  HeadlineProgress.tsx  ServiceBanner.tsx  StepTimeline.tsx  ThemeToggle.tsx
ui/src/components/providers/: ThemeProvider.tsx
ui/src/components/ui/: skeleton.tsx
ui/src/hooks/: useCountdown.ts  usePoll.ts
ui/src/lib/: api.ts  config.ts  format.ts  types.ts
ui/src/lib/papi/: client.ts
