[package]
name = "paseo-downsizer-service"
version = "0.1.0"
edition = "2021"
description = "Monitor + auto-dispatch service for the controlled downsizing of the Paseo relay"

[[bin]]
name = "paseo-downsizer-service"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
subxt = { version = "0.50", features = ["native", "reconnecting-rpc-client"] }
subxt-signer = { version = "0.50", features = ["sr25519", "subxt"] }
axum = "0.8"
tower-http = { version = "0.6", features = ["cors"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
thiserror = "2"
clap = { version = "4", features = ["derive", "env"] }
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
parking_lot = "0.12"
